--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,7 @@
 .metadata
 .project
 .recommenders
+.classpath
+.settings
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
